Toegevoegd pagina my watchlist klaar buiten checkboxes

--- a/myauctions.html
+++ b/myauctions.html
@@ -212,7 +212,7 @@
           <thead>
             <tr>
               <th scope="col"></th>
-              <th colspan="2" scope="col">Auction details</th>
+              <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
               <th scope="col">Remaining time</th>
@@ -223,14 +223,14 @@
             <tr>
               <th scope="row"><img src="images/auction-radioplayer-small.jpg" alt="red radioplayer"></th>
 
-              <td colspan="2">
+              <td class="auction-details" colspan="2">
                 <p>Dance of Time III</p>
                 <p>1979, Salvador Dali</p>
               </td>
 
-              <td>€8900</td>
+              <td class="estimated-price">€8900</td>
 
-              <td>
+              <td class="end-date">
                 <p>September 09, 2013</p>
                 <p>13:00 p.m. (EST)</p>
               </td>
@@ -242,14 +242,14 @@
             <tr>
               <th scope="row"><img src="images/auction-men-blue-small.jpg" alt="red radioplayer"></th>
 
-              <td colspan="2">
+              <td class="auction-details" colspan="2">
                 <p>Dance of Time III</p>
                 <p>1979, Salvador Dali</p>
               </td>
 
-              <td>€8900</td>
+              <td class="estimated-price">€8900</td>
 
-              <td>
+              <td class="end-date">
                 <p>September 09, 2013</p>
                 <p>13:00 p.m. (EST)</p>
               </td>
@@ -270,7 +270,7 @@
           <thead>
             <tr>
               <th scope="col"></th>
-              <th colspan="2" scope="col">Auction details</th>
+              <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
               <th scope="col">Remaining time</th>
@@ -281,19 +281,19 @@
             <tr>
               <th scope="row"><img src="images/auction-lady-orange-small.jpg" alt="red radioplayer"></th>
 
-              <td colspan="2">
+              <td class="auction-details" colspan="2">
                 <p>Dance of Time III</p>
                 <p>1979, Salvador Dali</p>
               </td>
 
-              <td>€8900</td>
+              <td class="estimated-price">€8900</td>
 
-              <td>
+              <td class="end-date">
                 <p>September 09, 2013</p>
                 <p>13:00 p.m. (EST)</p>
               </td>
 
-              <td>x</td>
+              <td>25d 14u 44m</td>
             </tr>
           </tbody>
 
@@ -313,7 +313,7 @@
           <thead>
             <tr>
               <th scope="col"></th>
-              <th colspan="2" scope="col">Auction details</th>
+              <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
               <th scope="col">Remaining time</th>
@@ -324,19 +324,19 @@
             <tr>
               <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
 
-              <td colspan="2">
+              <td class="auction-details" colspan="2">
                 <p>Dance of Time III</p>
                 <p>1979, Salvador Dali</p>
               </td>
 
-              <td>€8900</td>
+              <td class="estimated-price">€8900</td>
 
-              <td>
+              <td class="end-date">
                 <p>September 09, 2013</p>
                 <p>13:00 p.m. (EST)</p>
               </td>
 
-              <td>x</td>
+              <td>25d 14u 44m</td>
             </tr>
           </tbody>
 
@@ -353,7 +353,7 @@
           <thead>
             <tr>
               <th scope="col"></th>
-              <th colspan="2" scope="col">Auction details</th>
+              <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
               <th scope="col">Remaining time</th>
@@ -364,57 +364,57 @@
             <tr>
               <th scope="row"><img src="images/auction-klok-small.jpg" alt="red radioplayer"></th>
 
-              <td colspan="2">
+              <td class="auction-details" colspan="2">
                 <p>Dance of Time III</p>
                 <p>1979, Salvador Dali</p>
               </td>
 
-              <td>€8900</td>
+              <td class="estimated-price">€8900</td>
 
-              <td>
+              <td class="end-date">
                 <p>September 09, 2013</p>
                 <p>13:00 p.m. (EST)</p>
               </td>
 
-              <td>sold</td>
+              <td>25d 14u 44m</td>
             </tr>
 
 
             <tr>
               <th scope="row"><img src="images/auction-laughing-small.jpg" alt="red radioplayer"></th>
 
-              <td colspan="2">
+              <td class="auction-details" colspan="2">
                 <p>Dance of Time III</p>
                 <p>1979, Salvador Dali</p>
               </td>
 
-              <td>€8900</td>
+              <td class="estimated-price">€8900</td>
 
-              <td>
+              <td class="end-date">
                 <p>September 09, 2013</p>
                 <p>13:00 p.m. (EST)</p>
               </td>
 
-              <td>sold</td>
+              <td>25d 14u 44m</td>
             </tr>
 
 
             <tr>
               <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
 
-              <td colspan="2">
+              <td class="auction-details" colspan="2">
                 <p>Dance of Time III</p>
                 <p>1979, Salvador Dali</p>
               </td>
 
-              <td>€8900</td>
+              <td class="estimated-price">€8900</td>
 
-              <td>
+              <td class="end-date">
                 <p>September 09, 2013</p>
                 <p>13:00 p.m. (EST)</p>
               </td>
 
-              <td>sold</td>
+              <td>25d 14u 44m</td>
             </tr>
           </tbody>
 
