--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -212,21 +212,19 @@
         </div>
 
 
-        <p>
+        <p class="filter-mywatchlist">
           <a class="small-grey filter" href="#">all(11)</a> |
           <a class="small-grey filter" href="#">active(8)</a> |
           <a class="small-grey filter" href="#">ended(3)</a>
         </p>
 
 
-        <h4>Pending</h4>
-
         <table class="table">
 
           <thead>
             <tr>
               <th scope="col"></th>
-              <th colspan="2" scope="col">Auction details</th>
+              <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
               <th scope="col">Remaining time</th>
@@ -237,14 +235,34 @@
             <tr>
               <th scope="row"><img src="images/auction-radioplayer-small.jpg" alt="red radioplayer"></th>
 
-              <td colspan="2">
+              <td class="auction-details" colspan="2">
                 <p>Dance of Time III</p>
                 <p>1979, Salvador Dali</p>
               </td>
 
-              <td>€8900</td>
+              <td class="estimated-price">€8900</td>
 
-              <td>
+              <td class="end-date">
+                <p>September 09, 2013</p>
+                <p>13:00 p.m. (EST)</p>
+              </td>
+
+              <td>25d 14u 44m</td>
+            </tr>
+
+
+
+            <tr>
+              <th scope="row"><img src="images/auction-klok-small.jpg" alt="red radioplayer"></th>
+
+              <td class="auction-details" colspan="2">
+                <p>Dance of Time III</p>
+                <p>1979, Salvador Dali</p>
+              </td>
+
+              <td class="estimated-price">€8900</td>
+
+              <td class="end-date">
                 <p>September 09, 2013</p>
                 <p>13:00 p.m. (EST)</p>
               </td>
@@ -256,14 +274,167 @@
             <tr>
               <th scope="row"><img src="images/auction-men-blue-small.jpg" alt="red radioplayer"></th>
 
-              <td colspan="2">
+              <td class="auction-details" colspan="2">
                 <p>Dance of Time III</p>
                 <p>1979, Salvador Dali</p>
               </td>
 
-              <td>€8900</td>
+              <td class="estimated-price">€8900</td>
 
-              <td>
+              <td class="end-date">
+                <p>September 09, 2013</p>
+                <p>13:00 p.m. (EST)</p>
+              </td>
+
+              <td>25d 14u 44m</td>
+            </tr>
+
+
+            <tr>
+              <th scope="row"><img src="images/auction-lady-orange-small.jpg" alt="red radioplayer"></th>
+
+              <td class="auction-details" colspan="2">
+                <p>Dance of Time III</p>
+                <p>1979, Salvador Dali</p>
+              </td>
+
+              <td class="estimated-price">€8900</td>
+
+              <td class="end-date">
+                <p>September 09, 2013</p>
+                <p>13:00 p.m. (EST)</p>
+              </td>
+
+              <td>25d 14u 44m</td>
+            </tr>
+
+
+            <tr>
+              <th scope="row"><img src="images/auction-greek-small.jpg" alt="red radioplayer"></th>
+
+              <td class="auction-details" colspan="2">
+                <p>Dance of Time III</p>
+                <p>1979, Salvador Dali</p>
+              </td>
+
+              <td class="estimated-price">€8900</td>
+
+              <td class="end-date">
+                <p>September 09, 2013</p>
+                <p>13:00 p.m. (EST)</p>
+              </td>
+
+              <td>25d 14u 44m</td>
+            </tr>
+
+
+            <tr>
+              <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
+
+              <td class="auction-details" colspan="2">
+                <p>Dance of Time III</p>
+                <p>1979, Salvador Dali</p>
+              </td>
+
+              <td class="estimated-price">€8900</td>
+
+              <td class="end-date">
+                <p>September 09, 2013</p>
+                <p>13:00 p.m. (EST)</p>
+              </td>
+
+              <td>25d 14u 44m</td>
+            </tr>
+
+
+            <tr>
+              <th scope="row"><img src="images/auction-laughing-small.jpg" alt="red radioplayer"></th>
+
+              <td class="auction-details" colspan="2">
+                <p>Dance of Time III</p>
+                <p>1979, Salvador Dali</p>
+              </td>
+
+              <td class="estimated-price">€8900</td>
+
+              <td class="end-date">
+                <p>September 09, 2013</p>
+                <p>13:00 p.m. (EST)</p>
+              </td>
+
+              <td>25d 14u 44m</td>
+            </tr>
+
+
+            <tr>
+              <th scope="row"><img src="images/auction-recordplayer-small.jpg" alt="red radioplayer"></th>
+
+              <td class="auction-details" colspan="2">
+                <p>Dance of Time III</p>
+                <p>1979, Salvador Dali</p>
+              </td>
+
+              <td class="estimated-price">€8900</td>
+
+              <td class="end-date">
+                <p>September 09, 2013</p>
+                <p>13:00 p.m. (EST)</p>
+              </td>
+
+              <td>25d 14u 44m</td>
+            </tr>
+
+
+
+            <tr>
+              <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
+
+              <td class="auction-details" colspan="2">
+                <p>Dance of Time III</p>
+                <p>1979, Salvador Dali</p>
+              </td>
+
+              <td class="estimated-price">€8900</td>
+
+              <td class="end-date">
+                <p>September 09, 2013</p>
+                <p>13:00 p.m. (EST)</p>
+              </td>
+
+              <td>25d 14u 44m</td>
+            </tr>
+
+
+            <tr>
+              <th scope="row"><img src="images/auction-greek-small.jpg" alt="red radioplayer"></th>
+
+              <td class="auction-details" colspan="2">
+                <p>Dance of Time III</p>
+                <p>1979, Salvador Dali</p>
+              </td>
+
+              <td class="estimated-price">€8900</td>
+
+              <td class="end-date">
+                <p>September 09, 2013</p>
+                <p>13:00 p.m. (EST)</p>
+              </td>
+
+              <td>25d 14u 44m</td>
+            </tr>
+
+
+            <tr>
+              <th scope="row"><img src="images/auction-recordplayer-small.jpg" alt="red radioplayer"></th>
+
+              <td class="auction-details" colspan="2">
+                <p>Dance of Time III</p>
+                <p>1979, Salvador Dali</p>
+              </td>
+
+              <td class="estimated-price">€8900</td>
+
+              <td class="end-date">
                 <p>September 09, 2013</p>
                 <p>13:00 p.m. (EST)</p>
               </td>
@@ -275,164 +446,6 @@
 
         </table>
 
-
-        <h4>Refused</h4>
-
-
-        <table class="table">
-
-          <thead>
-            <tr>
-              <th scope="col"></th>
-              <th colspan="2" scope="col">Auction details</th>
-              <th scope="col">Estimated price</th>
-              <th scope="col">End date</th>
-              <th scope="col">Remaining time</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <th scope="row"><img src="images/auction-lady-orange-small.jpg" alt="red radioplayer"></th>
-
-              <td colspan="2">
-                <p>Dance of Time III</p>
-                <p>1979, Salvador Dali</p>
-              </td>
-
-              <td>€8900</td>
-
-              <td>
-                <p>September 09, 2013</p>
-                <p>13:00 p.m. (EST)</p>
-              </td>
-
-              <td>x</td>
-            </tr>
-          </tbody>
-
-        </table>
-
-
-        <h4>Active</h4>
-
-        <p class="info">You currently have no active auctions. Please add a new auction or wait for approval.</p>
-
-
-
-        <h4 class="margin-top-medium">Expired</h4>
-
-        <table class="table">
-
-          <thead>
-            <tr>
-              <th scope="col"></th>
-              <th colspan="2" scope="col">Auction details</th>
-              <th scope="col">Estimated price</th>
-              <th scope="col">End date</th>
-              <th scope="col">Remaining time</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
-
-              <td colspan="2">
-                <p>Dance of Time III</p>
-                <p>1979, Salvador Dali</p>
-              </td>
-
-              <td>€8900</td>
-
-              <td>
-                <p>September 09, 2013</p>
-                <p>13:00 p.m. (EST)</p>
-              </td>
-
-              <td>x</td>
-            </tr>
-          </tbody>
-
-        </table>
-
-
-
-
-
-        <h4 class="margin-top-medium">Sold</h4>
-
-        <table class="table">
-
-          <thead>
-            <tr>
-              <th scope="col"></th>
-              <th colspan="2" scope="col">Auction details</th>
-              <th scope="col">Estimated price</th>
-              <th scope="col">End date</th>
-              <th scope="col">Remaining time</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <th scope="row"><img src="images/auction-klok-small.jpg" alt="red radioplayer"></th>
-
-              <td colspan="2">
-                <p>Dance of Time III</p>
-                <p>1979, Salvador Dali</p>
-              </td>
-
-              <td>€8900</td>
-
-              <td>
-                <p>September 09, 2013</p>
-                <p>13:00 p.m. (EST)</p>
-              </td>
-
-              <td>sold</td>
-            </tr>
-
-
-            <tr>
-              <th scope="row"><img src="images/auction-laughing-small.jpg" alt="red radioplayer"></th>
-
-              <td colspan="2">
-                <p>Dance of Time III</p>
-                <p>1979, Salvador Dali</p>
-              </td>
-
-              <td>€8900</td>
-
-              <td>
-                <p>September 09, 2013</p>
-                <p>13:00 p.m. (EST)</p>
-              </td>
-
-              <td>sold</td>
-            </tr>
-
-
-            <tr>
-              <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
-
-              <td colspan="2">
-                <p>Dance of Time III</p>
-                <p>1979, Salvador Dali</p>
-              </td>
-
-              <td>€8900</td>
-
-              <td>
-                <p>September 09, 2013</p>
-                <p>13:00 p.m. (EST)</p>
-              </td>
-
-              <td>sold</td>
-            </tr>
-          </tbody>
-
-        </table>
 
 
 
