Toegevoegd checkboxes naast table my watchlist

--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -223,6 +223,7 @@
 
           <thead>
             <tr>
+              <th class="check" scope="col"></th>
               <th scope="col"></th>
               <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
@@ -233,6 +234,9 @@
 
           <tbody>
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-radioplayer-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -253,6 +257,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-klok-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -272,6 +279,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-men-blue-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -291,6 +301,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-lady-orange-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -310,6 +323,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-greek-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -329,6 +345,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -348,6 +367,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-laughing-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -367,6 +389,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-recordplayer-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -387,6 +412,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -406,6 +434,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-greek-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
@@ -425,6 +456,9 @@
 
 
             <tr>
+              <td>
+                <input type="checkbox" value="" id="check-terms">
+              </td>
               <th scope="row"><img src="images/auction-recordplayer-small.jpg" alt="red radioplayer"></th>
 
               <td class="auction-details" colspan="2">
