Checkboxen links van table kunnen afscheiden

--- a/myauctions.html
+++ b/myauctions.html
@@ -211,7 +211,7 @@
 
           <thead>
             <tr>
-              <th scope="col"></th>
+              <th class="table-images" scope="col"></th>
               <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
@@ -269,7 +269,7 @@
 
           <thead>
             <tr>
-              <th scope="col"></th>
+              <th class="table-images" scope="col"></th>
               <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
@@ -312,7 +312,7 @@
 
           <thead>
             <tr>
-              <th scope="col"></th>
+              <th class="table-images" scope="col"></th>
               <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
@@ -352,7 +352,7 @@
 
           <thead>
             <tr>
-              <th scope="col"></th>
+              <th class="table-images" scope="col"></th>
               <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
