--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -224,7 +224,7 @@
           <thead>
             <tr>
               <th class="check" scope="col"></th>
-              <th scope="col"></th>
+              <th class="table-images" scope="col"></th>
               <th class="auction-details" colspan="2" scope="col">Auction details</th>
               <th scope="col">Estimated price</th>
               <th scope="col">End date</th>
