Toegevoegd minder ruimte bij checkboxen, filter op hoogte auction details

--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -234,7 +234,7 @@
 
           <tbody>
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-radioplayer-small.jpg" alt="red radioplayer"></th>
@@ -257,7 +257,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-klok-small.jpg" alt="red radioplayer"></th>
@@ -279,7 +279,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-men-blue-small.jpg" alt="red radioplayer"></th>
@@ -301,7 +301,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-lady-orange-small.jpg" alt="red radioplayer"></th>
@@ -323,7 +323,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-greek-small.jpg" alt="red radioplayer"></th>
@@ -345,7 +345,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
@@ -367,7 +367,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-laughing-small.jpg" alt="red radioplayer"></th>
@@ -389,7 +389,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-recordplayer-small.jpg" alt="red radioplayer"></th>
@@ -412,7 +412,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-butt-small.jpg" alt="red radioplayer"></th>
@@ -434,7 +434,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-greek-small.jpg" alt="red radioplayer"></th>
@@ -456,7 +456,7 @@
 
 
             <tr>
-              <td>
+              <td class="check">
                 <input type="checkbox" value="" id="check-terms">
               </td>
               <th scope="row"><img src="images/auction-recordplayer-small.jpg" alt="red radioplayer"></th>
