Toegevoegd footer actives matchen headers

--- a/search.html
+++ b/search.html
@@ -576,26 +576,26 @@
 
                 <div class="bottom-nav-menu">
 
-                    <ul class="nav">
-                        <li class="nav-item-bottom">
-                          <a class="nav-link active" href="home.html">HOME</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">ART</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="search.html">ISEARCH</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">MYAUCTIONS</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">MYBIDS</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">CONTACT</a>
-                        </li>
-                    </ul>
+                  <ul class="nav">
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="home.html">HOME</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">ART</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link active" href="search.html">ISEARCH</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">MYAUCTIONS</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">MYBIDS</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">CONTACT</a>
+                      </li>
+                  </ul>
 
                 </div>
 
