--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -662,7 +662,7 @@
 
                     <ul class="nav">
                         <li class="nav-item-bottom">
-                          <a class="nav-link active" href="home.html">HOME</a>
+                          <a class="nav-link" href="home.html">HOME</a>
                         </li>
                         <li class="nav-item-bottom">
                           <a class="nav-link" href="#">ART</a>
