Code meer herbruikbaar gemaakt, profile pagina toegevoegd

--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
                   <ul class="nav">
                           <li class="nav-item-top">
                             <img id="watchlist" class="float" src="images/transparant.png">
-                            <a class="nav-link navbar-left" href="#">WATCHLIST</a>
+                            <a class="nav-link navbar-left" href="mywatchlist.html">WATCHLIST</a>
                           </li>
 
                           <li class="nav-item-top nav-top-middle">
@@ -107,7 +107,7 @@
 
 
               <div class="searchbar">
-                <form action="home.html">
+                <form action="search.html">
                   <input type="text" placeholder="Search" name="search">
                   <button type="submit"><img src="images/searchicon.png" alt="search-icon"></button>
                 </form>
@@ -136,7 +136,7 @@
                         <a class="nav-link" href="search.html">ISEARCH</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">MYAUCTIONS</a>
+                        <a class="nav-link" href="myauctions.html">MYAUCTIONS</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">MYBIDS</a>
@@ -307,7 +307,7 @@
                 <div class="blok">
                   <p class="footer-title">HELP</p>
                   <p><a href="#">Login</a></p>
-                  <p><a href="#">Register</a></p>
+                  <p><a href="register.html">Register</a></p>
                 </div>
 
 
@@ -315,7 +315,7 @@
                   <p class="footer-title">HELP</p>
                   <p><a href="#">Terms of Service</a></p>
                   <p><a href="#">Privacy Policy</a></p>
-                  <p><a href="#">FAQ</a></p>
+                  <p><a href="faq.html">FAQ</a></p>
                   <p><a href="#">Contact Us</a></p>
                   <p><a href="#">About Us</a></p>
                 </div>
@@ -407,7 +407,7 @@
                   <p class="footer-title">FIND WHAT YOU NEED.</p>
 
                   <div class="searchbar">
-                    <form action="home.html">
+                    <form action="search.html">
                       <input type="text" placeholder="Search" name="search">
                       <button type="submit"><img src="images/searchicon.png" alt="search-icon"></button>
                     </form>
@@ -473,7 +473,7 @@
                           <a class="nav-link" href="search.html">ISEARCH</a>
                         </li>
                         <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">MYAUCTIONS</a>
+                          <a class="nav-link" href="myauctions.html">MYAUCTIONS</a>
                         </li>
                         <li class="nav-item-bottom">
                           <a class="nav-link" href="#">MYBIDS</a>
