--- a/myauctions-new.html
+++ b/myauctions-new.html
@@ -88,7 +88,7 @@
                   <ul class="nav">
                           <li class="nav-item-top">
                             <img id="watchlist" class="float" src="images/transparant.png">
-                            <a class="nav-link navbar-left" href="#">WATCHLIST</a>
+                            <a class="nav-link navbar-left" href="mywatchlist.html">WATCHLIST</a>
                           </li>
 
                           <li class="nav-item-top nav-top-middle">
@@ -137,7 +137,7 @@
                         <a class="nav-link" href="search.html">ISEARCH</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link active" href="#">MYAUCTIONS</a>
+                        <a class="nav-link active" href="myauctions.html">MYAUCTIONS</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">MYBIDS</a>
@@ -552,7 +552,7 @@
                         <a class="nav-link" href="search.html">ISEARCH</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link active" href="#">MYAUCTIONS</a>
+                        <a class="nav-link active" href="myauctions.html">MYAUCTIONS</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">MYBIDS</a>
