--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -89,7 +89,7 @@
 
                     <li class="nav-item-top">
                       <img id="watchlist" class="float" src="images/transparant.png">
-                      <a class="nav-link navbar-left active" href="#">WATCHLIST</a>
+                      <a class="nav-link navbar-left active" href="mywatchlist.html">WATCHLIST</a>
                     </li>
 
                     <li class="nav-item-top nav-top-middle">
@@ -139,7 +139,7 @@
                         <a class="nav-link" href="search.html">ISEARCH</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">MYAUCTIONS</a>
+                        <a class="nav-link" href="myauctions.html">MYAUCTIONS</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">MYBIDS</a>
@@ -671,7 +671,7 @@
                           <a class="nav-link" href="search.html">ISEARCH</a>
                         </li>
                         <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">MYAUCTIONS</a>
+                          <a class="nav-link" href="myauctions.html">MYAUCTIONS</a>
                         </li>
                         <li class="nav-item-bottom">
                           <a class="nav-link" href="#">MYBIDS</a>
